# itmo-tg-bot

./: .env.example  .gitignore  README.md  app.py  config.py  data_prep.py  pyproject.toml  utils.py
data/chroma/: chroma.sqlite3
data/plans/: ai.json  ai_product.json
data/raw_pages/: ai.html  ai_product.html
